# qLogcat

./: .gitignore  README.md
.github/workflows/: codeql-analysis.yml
src/: CMakeLists.txt  logcatdatamodel.cpp  logcatdatamodel.h  logcatdatamodel_def.h  logcatfilterproxy.cpp  logcatfilterproxy.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pch.h
